Azim commit 25-11 Toggle switch and NonSubscriber changes

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "permissions": ["tabs", "storage"],
     "host_permissions": [],
     "background": {
-      "service_worker": "background.js"
+      "service_worker": "./background.js"
     },
     "content_scripts": [
       {
