--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
     "name": "Credifana",
     "version": "0.2",
     "description": "Extension showing price of all listed products when paid with credit card, listing the time period and percentage of interest per product.",
-    "permissions": ["tabs", "storage"],
-    "host_permissions": [],
+    "permissions": ["tabs", "storage", "cookies"],
+    "host_permissions": ["<all_urls>"],
     "background": {
       "service_worker": "./background.js"
     },
